# minigmp

./: .gitignore  CMakeLists.txt  README  conanfile.py  mini-gmp.h  minigmpConfig.cmake
.github/: settings.yml
test_package/: CMakeLists.txt  conanfile.py  main.cpp
